--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,23 @@
     <title>Dark Mode</title>
     <link rel="stylesheet" href="/style.css">
 </head>
-<body>
 
+<body>
     <div class="box">
         <div class="button-dark">
             <input type="checkbox" id="btn-dark" name="btn-dark">
             <label for="btn-dark">Dark mode</label>
         </div>
-
         <div class="content">
             <h1>Light / Dark Mode</h1>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nostrum eius voluptatibus debitis dolores quaerat laudantium cum et, consequatur nesciunt molestiae nobis adipisci reprehenderit praesentium tempore quos repellendus qui quia.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat nostrum eius voluptatibus debitis
+                dolores quaerat laudantium cum et, consequatur nesciunt molestiae nobis adipisci reprehenderit
+                praesentium tempore quos repellendus qui quia.
             </p>
         </div>
     </div>
-
     <script src="script.js"></script>
-
 </body>
+
 </html>
